# k4Reco

./: .git-blame-ignore-revs  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: pre-commit.yaml
cmake/: CreateProjectConfig.cmake  k4RecoConfig.cmake.in
doc/: ReleaseNotes.md
k4Reco/: CMakeLists.txt
k4Reco/CaloDigi/include/: RealisticCaloDigi.h  RealisticCaloReco.h
k4Reco/CaloDigi/src/: RealisticCaloDigi.cc  RealisticCaloReco.cc
k4Reco/ConformalTracking/: README.md
k4Reco/ConformalTracking/components/: ConformalTracking.cpp  ConformalTracking.h
k4Reco/ConformalTracking/include/: Cell.h  GaudiTrkUtils.h  HelixTrack.h  KDCluster.h  KDTrack.h  KDTree.h  Parameters.h  kdtree2.h
k4Reco/ConformalTracking/options/: runConformalTracking.py
k4Reco/ConformalTracking/scripts/: compare-tracks.py
k4Reco/ConformalTracking/src/: GaudiTrkUtils.cpp  HelixTrack.cpp  KDTrack.cpp  KDTree.cpp  kdtree2.cpp
k4Reco/DDPlanarDigi/: README.md
k4Reco/DDPlanarDigi/components/: DDPlanarDigi.cpp  DDPlanarDigi.h
k4Reco/DDPlanarDigi/options/: runDDPlanarDigi.py
k4Reco/FastJet/include/: EClusterMode.h  FastJetAlg.hxx
k4Reco/FastJet/src/: FastJetAlg.cpp
k4Reco/GaudiTrkUtils/: README.md
k4Reco/GaudiTrkUtils/include/: GaudiDDKalTest.h  GaudiDDKalTestTrack.h
k4Reco/GaudiTrkUtils/src/: GaudiDDKalTest.cpp  GaudiDDKalTestTrack.cpp
k4Reco/Overlay/components/: OverlayTiming.cpp  OverlayTiming.h  OverlayTimingRandomMix.cpp  OverlayTimingRandomMix.h
k4Reco/Tracking/: README.md
k4Reco/Tracking/include/: ClonesAndSplitTracksFinder.h  RefitFinal.h  TruthTrackFinder.h
k4Reco/Tracking/options/: runClonesAndSplitTracksFinder.py  runRefitFinal.py  runTruthTrackFinder.py
k4Reco/Tracking/src/: ClonesAndSplitTracksFinder.cpp  RefitFinal.cpp  TruthTrackFinder.cpp
python/: CMakeLists.txt
python/conformal_tracking_utils/: __init__.py  utils.py
test/: CMakeLists.txt
